# siska

./: .gitignore  CMakeLists.txt  main.cpp  railwayMLL.cpp  railwayMLL.h  run.bat  setup.bat
data/: railway.db
src/: main.cpp
src/core/: railwayMLL.cpp  railwayMLL.h
src/db/: DatabaseManager.cpp  DatabaseManager.h
